исправлен метод getPost()

--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -176,7 +176,7 @@ body {
   background-position: cover;
 }
 
-.container::after {
+.main::after {
   content: '';
   position: absolute;
   top: 0;
