--- a/web/src/scss/block/main/main.scss
+++ b/web/src/scss/block/main/main.scss
@@ -3,7 +3,7 @@ html, body {
     overflow: auto;    
 }
 
-.wrap{
+.wrap {
     min-height: 100%;
     background: url(../images/bg.jpg) center no-repeat;
     background-position: cover;
@@ -19,11 +19,15 @@ html, body {
         height: 100%;
         background-color: rgba(0, 0, 0, 0.7);
     }
+    &__menu{
+        position: relative;
+        z-index: 1;
+    }
     &__title{
         margin: 50px 0 250px 0;
         p{
             position: relative;
-            z-index: 1;           
+            z-index: 1;
             color: $white;
         }
         @media(max-width: 992px){
@@ -68,5 +72,12 @@ html, body {
     }
     .warning {
         color: red;
+    }
+    &__block {
+        position: relative;
+        z-index: 1;
+        p {
+            color: $white;
+        }
     }
 }
